--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - gym_tracker_data:/app
     environment:
       FLASK_ENV: development
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENAI_MODEL_NAME: gpt-4.1-nano
 
 volumes:
   gym_tracker_data:
