--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,8 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - gym_tracker_data:/app
+      - /media/cluster/myfitnessapp/:/app/data
     environment:
       FLASK_ENV: development
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_MODEL_NAME: gpt-4.1-nano
-
-volumes:
-  gym_tracker_data:
