--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,4 @@ services:
       FLASK_ENV: development
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_MODEL_NAME: gpt-4.1-nano
+      DATABASE_PATH: /app/data/database.sqlite
